# opre_zh

./: CMakeLists.txt  main.c
array/: array.c  array.h
message_queue/simple/: example.c  simple_with_fork.c
message_queue/zh/: zh_example.c  zh_example_signal.h
pipe/: pipe.c  pipe.h
print/: print.c  print.h
read/: read.c  read.h
semaphore/: IMPORTANT.txt
semaphore/zh/: zh_example_semaphore.c  zh_example_semaphore.h
shared_memory/simple/: simple.c
shared_memory/zh/: zh_example_shared_memory.c  zh_example_shared_memory.h
signal/: signal.c  signal.h
signal/zh_example/: zh_example_signal.c
struct/: example_struct.h  struct.c  struct.h
zhk/16_12_15/: feladat.txt  zh.c
zhk/16_12_19/: feladat.txt  zh.c
zhk/17_05_17/: feladat.txt  zh.c
zhk/gyakorlo/: gyakorlo_zh.c
